@@ -4,6 +4,8 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
@@ -44,7 +46,7 @@ public class HomeView extends StackPane implements Subscriber {
     /**
      * All the possible pages of the home view.
      */
-    private enum HomeViewPage {HOME, ADD_GOAL}
+    enum HomeViewPage {HOME, ADD_GOAL}
 
     /**
      * The current page that the home view should show.
@@ -110,6 +112,8 @@ public class HomeView extends StackPane implements Subscriber {
     private HBox addGoalFormRow1;
     private HBox addGoalFormRow2;
     private HBox addGoalFormRow3;
+    private HBox addGoalFormRow4;
+    private VBox suggestionsBox;
     private VBox addGoalForm;
     private ToggleGroup sectionToggleGroup;
     private final DatePicker startDatePicker;
@@ -118,6 +122,8 @@ public class HomeView extends StackPane implements Subscriber {
     private final Button deleteSectionButton;
     private final Button giveMeSuggestionsButton;
     private final Label suggestionsContentLabel;
+    private final Label goalDataOverviewLabel;
+    private HBox goalDataOverviewModule;
 
 
     /**
@@ -138,16 +144,19 @@ public class HomeView extends StackPane implements Subscriber {
         addGoalButton.getStyleClass().add("cbutton");
 //        addGoalButton.getStyleClass().add("add-goal-button");
 
-        welcomeLabel = new Label("Welcome to Your Personal Goal Tracker!");
+        welcomeLabel = new Label("Welcome to StatTrack!");
         welcomeLabel.getStyleClass().add("welcome-label");
 
         sectionHeading = new Label("Goal Sections");
         quickActionsHeading = new Label("Quick Actions");
         upcomingGoalsHeading = new Label("Upcoming Goals");
+        goalDataOverviewLabel = new Label("Goal Data Overview");
+        goalDataOverviewModule = new HBox();
 
         sectionHeading.getStyleClass().add("heading-level-2");
         quickActionsHeading.getStyleClass().add("heading-level-2");
         upcomingGoalsHeading.getStyleClass().add("heading-level-2");
+        goalDataOverviewLabel.getStyleClass().add("heading-level-2");
 
         clearGoalsButton = new Button("Clear Goals");
         clearGoalsButton.getStyleClass().add("cbutton");
@@ -162,7 +171,7 @@ public class HomeView extends StackPane implements Subscriber {
         // Motivational Message module
         motivationModule = new VBox(20);
         motivationModule.setAlignment(Pos.CENTER_LEFT);
-        motivationModule.getStyleClass().add("motivation-module");
+        motivationModule.getStyleClass().add("module");
 
         // Greeting text configuration
         userGreeting = new Label();
@@ -174,7 +183,7 @@ public class HomeView extends StackPane implements Subscriber {
         int randomIndex = random.nextInt(motivationalMessages.length);
         motivationalLabel = new Label();
         motivationalLabel.setText(motivationalMessages[randomIndex]);
-        motivationalLabel.getStyleClass().add("motivation-label");
+        motivationalLabel.getStyleClass().add("bigger-paragraph-text");
         motivationModule.getChildren().add(motivationalLabel);
 
         randomIndex = random.nextInt(greetings.length);
@@ -182,12 +191,12 @@ public class HomeView extends StackPane implements Subscriber {
         userGreeting.setText(currentGreeting + ", User! Let's complete some goals.");
 
         // Add goal page elements
-        addGoalTitleLabel = new Label("Add a Goal!");
-        addGoalTitleLabel.setStyle("-fx-font-size: 16px; -fx-font-weight: bold;");
+        addGoalTitleLabel = new Label("Let's Add a New Goal:");
+        addGoalTitleLabel.setStyle("-fx-font-size: 28px; -fx-font-weight: bold;");
 
         submitGoalButton = new Button("Add Goal");
         submitGoalButton.getStyleClass().add("cbutton");
-        giveMeSuggestionsButton = new Button("Give me suggestions");
+        giveMeSuggestionsButton = new Button("Give Me Suggestions");
         giveMeSuggestionsButton.getStyleClass().add("cbutton");
 
         titleInput = new TextField();
@@ -201,7 +210,8 @@ public class HomeView extends StackPane implements Subscriber {
         addGoalFormRow1 = new HBox(20);
         addGoalFormRow2 = new HBox(20);
         addGoalFormRow3 = new HBox(20);
-        addGoalForm = new VBox(20);
+        addGoalFormRow4 = new HBox(20);
+        addGoalForm = new VBox(30);
 
         suggestionsContentLabel = new Label("");
 
@@ -353,7 +363,7 @@ public class HomeView extends StackPane implements Subscriber {
         }
     }
 
-    private void changePage(HomeViewPage newPage) {
+    void changePage(HomeViewPage newPage) {
         this.currentViewPage = newPage;
         drawView();
     }
@@ -394,8 +404,12 @@ public class HomeView extends StackPane implements Subscriber {
     public void modelUpdated() {
         // If a section is currently selected, update its goals display; otherwise, redraw the view.
         if (currentViewPage == HomeViewPage.HOME && sectionToggleGroup.getSelectedToggle() != null) {
+            drawView();
             String selectedSection = ((ToggleButton) sectionToggleGroup.getSelectedToggle()).getText();
             updateGoalsDisplay(selectedSection);
+            if (userHistoryDataModel != null) {
+                userGreeting.setText(currentGreeting + ", " + userHistoryDataModel.getUserName() + "! Let's complete some goals.");
+            }
         } else {
             drawView();
         }
@@ -455,10 +469,14 @@ public class HomeView extends StackPane implements Subscriber {
      */
     private void handleSuggestions(SuggestionsController s) {
         try {
+            suggestionsBox.getChildren().clear();
             Goal newGoal = getGoalFromInput();
             s.validateInput(newGoal);
-            String suggestionsInText = s.handleButtonPress(newGoal);
-            suggestionsContentLabel.setText(suggestionsInText);
+            List<String> suggestionsInText = s.handleButtonPress(newGoal);
+            for (String suggestion: suggestionsInText){
+                suggestionsBox.getChildren().add(createSuggestionBox(suggestion));
+            }
+            suggestionsContentLabel.setText("Here's what I found...");
         } catch (InputMismatchException e) {
             showErrorAlert(e.getMessage());
         }
@@ -478,7 +496,7 @@ public class HomeView extends StackPane implements Subscriber {
     private void resetAddGoalPage() {
         titleInput.clear();
         difficultyComboBox.setValue("Medium");
-        sectionToggleGroup.selectToggle(sectionToggleGroup.getToggles().getFirst());
+        sectionToggleGroup.selectToggle(sectionToggleGroup.getToggles().get(0));
     }
 
     private void drawHomeView() {
@@ -486,14 +504,6 @@ public class HomeView extends StackPane implements Subscriber {
         root.setAlignment(Pos.TOP_LEFT);
         root.setSpacing(20);
         root.setPadding(new Insets(20));
-
-        Label sectionTitle = new Label("Here are your current goal sections:");
-        sectionTitle.getStyleClass().add("section-title");
-
-        // hbox for title and sections
-        HBox titleAndButtons = new HBox(10);
-        titleAndButtons.setAlignment(Pos.CENTER_LEFT);
-        titleAndButtons.getChildren().addAll(sectionTitle);
 
         FlowPane sectionButtonsBox = new FlowPane();
         sectionButtonsBox.getStyleClass().add("flow-pane");
@@ -518,7 +528,7 @@ public class HomeView extends StackPane implements Subscriber {
 
         VBox mySectionsBox = new VBox(15);
         mySectionsBox.setAlignment(Pos.CENTER);
-        mySectionsBox.getChildren().addAll(titleAndButtons, sectionButtonsBox);
+        mySectionsBox.getChildren().addAll(sectionButtonsBox);
 
         VBox sectionsAndGoalsBox = new VBox(20);
         sectionsAndGoalsBox.getChildren().addAll(mySectionsBox, goalsBox);
@@ -535,6 +545,117 @@ public class HomeView extends StackPane implements Subscriber {
         spacer2.setPrefWidth(20);
         quickActionsGroup.getChildren().addAll(addGoalButton, clearGoalsButton, spacer1, createSectionButton, deleteSectionButton, spacer2, changeNameButton);
 
+        // Goal Overview Module
+        goalDataOverviewModule = new HBox(20);
+        goalDataOverviewModule.getStyleClass().add("b-module");
+
+        if (goalModel != null) {
+
+            // Goals Completed
+            VBox goalsCompletedBox = new VBox(10);
+            goalsCompletedBox.setAlignment(Pos.CENTER);
+            Label goalsCompletedLabel = new Label("Total Goals Completed: ");
+            Label goalsCompletedNumberLabel = new Label("" + goalModel.getGoals().stream().filter(Goal::isCompleted).collect(Collectors.toList()).size());
+            goalsCompletedLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsCompletedNumberLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsCompletedNumberLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 20");
+
+            goalsCompletedBox.getStyleClass().add("goal-card");
+            goalsCompletedBox.getChildren().addAll(goalsCompletedLabel, goalsCompletedNumberLabel);
+
+            goalDataOverviewModule.getChildren().addAll(goalsCompletedBox);
+            HBox.setHgrow(goalsCompletedBox, Priority.ALWAYS);
+
+            // Goals In-Progress
+            VBox goalsInProgressBox = new VBox(10);
+            goalsInProgressBox.setAlignment(Pos.CENTER);
+            Label goalsInProgressLabel = new Label("Total Goals In-Progress: ");
+
+            Label goalsInProgressNumberLabel = new Label("" + goalModel.getGoals().stream()
+                    .filter(goal -> (!goal.getEndDate().isBefore(LocalDate.now()))
+                            && (!goal.getStartDate().isAfter(LocalDate.now()) || goal.getStartDate().isEqual(LocalDate.now()))
+                            && !goal.isCompleted())
+                    .count());
+            goalsInProgressLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsInProgressNumberLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsInProgressNumberLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 20");
+
+            goalsInProgressBox.getStyleClass().add("goal-card");
+            goalsInProgressBox.getChildren().addAll(goalsInProgressLabel, goalsInProgressNumberLabel);
+
+            goalDataOverviewModule.getChildren().addAll(goalsInProgressBox);
+            HBox.setHgrow(goalsInProgressBox, Priority.ALWAYS);
+
+
+            // Goals Expired
+            VBox goalsExpiredBox = new VBox(10);
+            goalsExpiredBox.setAlignment(Pos.CENTER);
+            Label goalsExpiredLabel = new Label("Total Goals Expired: ");
+
+            Label goalsExpiredNumberLabel = new Label("" + goalModel.getGoals().stream()
+                    .filter(goal -> (goal.getEndDate().isBefore(LocalDate.now())))
+                    .count());
+            goalsExpiredLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsExpiredNumberLabel.getStyleClass().add("bigger-paragraph-text");
+            goalsExpiredNumberLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 20");
+
+            goalsExpiredBox.getStyleClass().add("goal-card");
+            goalsExpiredBox.getChildren().addAll(goalsExpiredLabel, goalsExpiredNumberLabel);
+
+            goalDataOverviewModule.getChildren().addAll(goalsExpiredBox);
+            HBox.setHgrow(goalsExpiredBox, Priority.ALWAYS);
+
+
+            // Goal Avg. Timeline
+            VBox goalTimelineAvgBox = new VBox(10);
+            goalTimelineAvgBox.setAlignment(Pos.CENTER);
+            Label goalTimelineAvgLabel = new Label("Average Goal Duration: ");
+
+            long totalDays = goalModel.getGoals().stream()
+                    .mapToLong(goal -> ChronoUnit.DAYS.between(goal.getStartDate(), goal.getEndDate().plusDays(1)))
+                    .sum();
+
+            Label goalTimelineAvgNumberLabel = new Label("" + (long) Math.ceil(((double) totalDays / goalModel.getGoals().size())) + " days");
+            goalTimelineAvgLabel.getStyleClass().add("bigger-paragraph-text");
+            goalTimelineAvgNumberLabel.getStyleClass().add("bigger-paragraph-text");
+            goalTimelineAvgNumberLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 20");
+
+            goalTimelineAvgBox.getStyleClass().add("goal-card");
+            goalTimelineAvgBox.getChildren().addAll(goalTimelineAvgLabel, goalTimelineAvgNumberLabel);
+
+            goalDataOverviewModule.getChildren().addAll(goalTimelineAvgBox);
+            HBox.setHgrow(goalTimelineAvgBox, Priority.ALWAYS);
+
+
+            // Goal Most Popular Difficulty
+            VBox goalDifficultyPopBox = new VBox(10);
+            goalDifficultyPopBox.setAlignment(Pos.CENTER);
+            Label goalDifficultyPopLabel = new Label("Most Popular Difficulty: ");
+
+            Map<String, Long> difficultyCounts = goalModel.getGoals().stream()
+                    .collect(Collectors.groupingBy(Goal::getDifficulty, Collectors.counting()));
+
+            // Find the difficulty with the most goals
+            String maxDifficulty = difficultyCounts.entrySet().stream()
+                    .max(Map.Entry.comparingByValue()) // Compare by count
+                    .map(Map.Entry::getKey) // Get the difficulty key
+                    .orElse(null); // In case there are no goals
+            if (maxDifficulty == null) {
+                maxDifficulty = "None";
+            }
+
+            Label goalDifficultyPopCategoryLabel = new Label(maxDifficulty);
+            goalDifficultyPopLabel.getStyleClass().add("bigger-paragraph-text");
+            goalDifficultyPopCategoryLabel.getStyleClass().add("bigger-paragraph-text");
+            goalDifficultyPopCategoryLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 20");
+
+            goalDifficultyPopBox.getStyleClass().add("goal-card");
+            goalDifficultyPopBox.getChildren().addAll(goalDifficultyPopLabel, goalDifficultyPopCategoryLabel);
+
+            goalDataOverviewModule.getChildren().addAll(goalDifficultyPopBox);
+            HBox.setHgrow(goalDifficultyPopBox, Priority.ALWAYS);
+        }
+
         int homeViewSpaceSize = 20;
 
         Region homeSpacer1 = new Region();
@@ -546,8 +667,21 @@ public class HomeView extends StackPane implements Subscriber {
         Region homeSpacer3 = new Region();
         homeSpacer3.setPrefWidth(homeViewSpaceSize);
 
-        root.getChildren().addAll(welcomeLabel, motivationModule, homeSpacer1, quickActionsHeading, quickActionsGroup, homeSpacer2,
-                upcomingGoalsHeading, upcomingGoalsModule, homeSpacer3, sectionHeading, sectionsAndGoalsBox);
+        Region homeSpacer4 = new Region();
+        homeSpacer4.setPrefWidth(homeViewSpaceSize);
+
+        Label quickActionsSubtitle = new Label("What would you like to do next in your goal planning?");
+        quickActionsSubtitle.getStyleClass().add("bigger-paragraph-text");
+        Label overviewGoalsSubtitle = new Label("Here are some summary stats for your currently planned goals:");
+        overviewGoalsSubtitle.getStyleClass().add("bigger-paragraph-text");
+        Label upcomingGoalsSubtitle = new Label("Let's see which goals you should focus on completing next:");
+        upcomingGoalsSubtitle.getStyleClass().add("bigger-paragraph-text");
+        Label sectionGoalsSubtitle = new Label("Here are your current sections and their goals:");
+        sectionGoalsSubtitle.getStyleClass().add("bigger-paragraph-text");
+
+        root.getChildren().addAll(welcomeLabel, motivationModule, homeSpacer1, new VBox(5, quickActionsHeading, quickActionsSubtitle), quickActionsGroup, homeSpacer2,
+                new VBox(5, goalDataOverviewLabel, overviewGoalsSubtitle), goalDataOverviewModule, homeSpacer4, new VBox(5, upcomingGoalsHeading, upcomingGoalsSubtitle),
+                upcomingGoalsModule, homeSpacer3, new VBox(5, sectionHeading, sectionGoalsSubtitle), sectionsAndGoalsBox);
         this.getChildren().add(root);
 
         //restore the selected toggle if a section was previously selected.
@@ -572,13 +706,14 @@ public class HomeView extends StackPane implements Subscriber {
         VBox root = new VBox();
         root.setPadding(new Insets(30));
         root.setAlignment(Pos.TOP_LEFT);
-        root.setSpacing(30);
+        root.setSpacing(35);
         this.getChildren().add(root);
 
         //clear to avoid dupes
         addGoalFormRow1.getChildren().clear();
         addGoalFormRow2.getChildren().clear();
         addGoalFormRow3.getChildren().clear();
+        addGoalFormRow4.getChildren().clear();
         addGoalForm.getChildren().clear();
 
         submitGoalButton.getStyleClass().add("button");
@@ -587,48 +722,94 @@ public class HomeView extends StackPane implements Subscriber {
         giveMeSuggestionsButton.getStyleClass().add("suggestions-button");
         cancelAddGoalButton.getStyleClass().add("button");
         cancelAddGoalButton.getStyleClass().add("cancel-button");
-
+        Label sectionLabel = new Label("Want Suggestions on Your New Goal, " + userHistoryDataModel.getUserName() + "?");
+        sectionLabel.setStyle("-fx-font-size: 14px; -fx-font-weight: bold;");
         //organize UI elements
         addGoalFormRow1.getChildren().addAll(new Label("Goal Title:"), titleInput, new Label("Sections:"), sectionButtons);
         addGoalFormRow2.getChildren().addAll(new Label("Difficulty:"), difficultyComboBox,
                 new Label("Start Date:"), startDatePicker,
                 new Label("End Date:"), endDatePicker);
-        addGoalFormRow3.getChildren().addAll(giveMeSuggestionsButton, submitGoalButton, cancelAddGoalButton);
+        addGoalFormRow3.getChildren().addAll(giveMeSuggestionsButton,submitGoalButton, cancelAddGoalButton);
+        addGoalFormRow4.getChildren().addAll(sectionLabel);
 
-        addGoalForm.getChildren().addAll(addGoalFormRow1, addGoalFormRow2, addGoalFormRow3);
+        addGoalForm.getChildren().addAll(addGoalFormRow1, addGoalFormRow2, addGoalFormRow3, addGoalFormRow4);
         titleInput.setPrefWidth(275);
 
         if (sectionToggleGroup.getSelectedToggle() == null && !sectionToggleGroup.getToggles().isEmpty()) {
             sectionToggleGroup.selectToggle(sectionToggleGroup.getToggles().get(0));
         }
 
-        //box for suggestions!
-        Label sectionLabel = new Label("Your Suggestions, Dani:");
-        sectionLabel.setStyle("-fx-font-size: 12px; -fx-font-weight: bold;");
         String suggestionsContent = "Click the button to find out!";
         suggestionsContentLabel.setText(suggestionsContent);
+        suggestionsContentLabel.setStyle("-fx-font-size: 16px;");
 
-        VBox suggestionsBox = new VBox();
-        suggestionsBox.setSpacing(10);
-        suggestionsBox.setPadding(new Insets(10));
-        suggestionsBox.setStyle("-fx-border-color: grey; -fx-border-width: 2px; -fx-background-color: #f9f9f9;");
+        suggestionsBox = new VBox();
+        suggestionsBox.setSpacing(4);
+        //suggestionsBox.setPadding(new Insets(10));
+//        suggestionsBox.setStyle("-fx-border-color: grey; -fx-border-width: 2px; -fx-background-color: #f9f9f9;");
+        suggestionsBox.getStyleClass().add("module");
         suggestionsBox.getChildren().addAll(suggestionsContentLabel);
+
+        // Spacer (to separate Form from suggestions)
+
+        //Region spacer1 = new Region();
 
         root.getChildren().addAll(
                 addGoalTitleLabel,
                 addGoalForm,
-                sectionLabel,
+                //spacer1,
                 suggestionsBox
         );
 
         //selecting general section toggle
-        Toggle default_toggle = sectionToggleGroup.getToggles().getFirst();
+        Toggle default_toggle = sectionToggleGroup.getToggles().get(0);
         for (Toggle t : sectionToggleGroup.getToggles()) {
             if (default_toggle.equals(t)) t.setSelected(true);
             else {
                 t.setSelected(false);
             }
 
+        }
+    }
+    /**
+     * Helper method to create each suggestion box
+     * */
+    private HBox createSuggestionBox(String content) {
+        Label suggestionContentLabel = new Label(content);
+        suggestionContentLabel.setStyle("-fx-font-size: 14px;");
+        suggestionContentLabel.setWrapText(true);
+
+        HBox suggestionBox = new HBox(30); // 10px spacing between elements
+        suggestionBox.getChildren().addAll(suggestionContentLabel);
+        if (content.contains("you tend to finish around"))
+        {
+            Button acceptButton = new Button("Change it! ✅");
+            acceptButton.setPrefWidth(300);
+            acceptButton.setOnAction(e -> {
+                acceptTimelineSuggestion(content);
+                acceptButton.setDisable(true);
+            });
+            suggestionBox.getChildren().add(acceptButton);
+        }
+        suggestionBox.setSpacing(10);
+        suggestionBox.getStyleClass().add("module");
+
+        return suggestionBox;
+    }
+
+    /**
+     * Updates the view timeline for the goal after user accepts changes
+     * */
+    public void acceptTimelineSuggestion(String suggestion){
+        if (suggestion.contains("add")){
+            String[] allStrings = suggestion.split(" ");
+            String numberOfDays = allStrings[allStrings.length - 2];
+            endDatePicker.setValue(endDatePicker.getValue().plusDays(Long.parseLong(numberOfDays)));
+        }
+        else if (suggestion.contains("minus")){
+            String[] allStrings = suggestion.split(" ");
+            String numberOfDays = allStrings[allStrings.length - 2];
+            endDatePicker.setValue(endDatePicker.getValue().minusDays(Long.parseLong(numberOfDays)));
         }
     }
 
@@ -753,13 +934,17 @@ public class HomeView extends StackPane implements Subscriber {
 
         List<Goal> upcomingGoals = goalModel.getGoals().stream()
                 .filter(goal -> !goal.isCompleted())
-                .filter(goal -> goal.getEndDate().isAfter(today) && goal.getEndDate().isBefore(nextWeek))
+                .filter(goal ->
+                        !goal.getEndDate().isBefore(today) &&
+                                !goal.getEndDate().isAfter(nextWeek)
+                )
                 .sorted(Comparator.comparing(Goal::getEndDate))
-                .collect(Collectors.toList());
+                .toList();
 
         if (upcomingGoals.isEmpty()) {
             Label noGoalsLabel = new Label("No goals due in the next 7 days!");
             noGoalsLabel.getStyleClass().add("upcoming-goals-label");
+            noGoalsLabel.setStyle("-fx-font-size: 16");
             scrollContent.getChildren().add(noGoalsLabel);
         } else {
             HBox goalsRow = new HBox(15);
